vpc.yml
AWSTemplateFormatVersion: 2010-09-09

Description: This template creates a vpc with public and private subnets
  

Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "VPC CIDR"
        Parameters: 
          - VpcCIDR
          
      - 
        Label: 
          default: "Subnet CIDR"
        Parameters: 
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
          - PrivateSubnet1CIDR
          - PrivateSubnet2CIDR
          
      - 
        Label: 
          default: "SSH CIDR"
        Parameters: 
          - SSHLocation
          
    

Parameters:
  VpcCIDR:
    Default: 10.69.76.0/26
    Description: Please enter the IP range (CIDR Notation) for this vpc
    Type: String
    
  PublicSubnet1CIDR:
    Default: 10.69.76.0/28
    Description: Please enter the IP range (CIDR Notation) for the Public Subnet 1
    Type: String
    
  PublicSubnet2CIDR:
    Default: 10.69.76.16/28 
    Description: Please enter the IP range (CIDR Notation) for the Public Subnet 2
    Type: String
    
  PrivateSubnet1CIDR:
    Default: 10.69.76.32/28
    Description: Please enter the IP range (CIDR Notation) for the Private Subnet 1
    Type: String
    
  PrivateSubnet2CIDR:
    Default: 10.69.76.48/28 
    Description: Please enter the IP range (CIDR Notation) for the Private Subnet 2
    Type: String
    
  SSHLocation:
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 0.0.0.0/0
    Description: The IP address range that can be used to access the web server using SSH.
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: Demo VPC
          
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: Demo IGW
        
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
      
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: Public Subnet 1
      VpcId: !Ref VPC
      
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: Public Subnet 2
      VpcId: !Ref VPC
      
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: Public route table
      VpcId: !Ref VPC
      
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
      
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
      
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
      
          
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Subnet 1 | App Tier
      VpcId: !Ref VPC
      
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Subnet 2 | Database Tier
      VpcId: !Ref VPC
      
        
  SSHSecurityGroup: #SSH Security group for the Jumpbox.
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH Security Group (Jumpbox)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0          
      Tags:
        - Key: Name
          Value: SSH Security Group

  WebServerSecurityGroup: #Security group for the Server in Private subnet 1
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH access via port 22
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref SSHSecurityGroup
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          SourceSecurityGroupId: !Ref SSHSecurityGroup  
      Tags:
        - Key: Name
          Value: WebServer Security Group
          
  DatabaseSecurityGroup: #Security group for the Database server in Private subnet 2
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open database for access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: Database Security Group

  ReserveSecurityGroup: #SSH Security group for the Reserve Instance.
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Reserve Instance Security Group 
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          SourceSecurityGroupId: !Ref SSHSecurityGroup            
      Tags:
        - Key: Name
          Value: Reserve Security Group        
      

  

Outputs: #This allows other stacks to reference the outputs from this stack
  VPC:
    Description: VPC ID
    Export:
      Name: VPC
    Value: !Ref VPC
    
  PublicSubnet1:
    Description: Public Subnet 1 ID
    Export:
      Name: PublicSubnet1
    Value: !Ref PublicSubnet1
    
  PublicSubnet2:
    Description: Public Subnet 2 ID
    Export:
      Name: PublicSubnet2
    Value: !Ref PublicSubnet2
    
  PrivateSubnet1:
    Description: Private Subnet 1 ID
    Export:
      Name: PrivateSubnet1
    Value: !Ref PrivateSubnet1
    
  PrivateSubnet2:
    Description: Private Subnet 2 ID
    Export:
      Name: PrivateSubnet2
    Value: !Ref PrivateSubnet2
    
      
  SSHSecurityGroup:
    Description: SSH Security Group ID
    Export:
      Name: 'SSHSecurityGroup'
    Value: !Ref SSHSecurityGroup
    
  WebServerSecurityGroup:
    Description: WebServer Security Group ID
    Export:
      Name: 'WebServerSecurityGroup'
    Value: !Ref WebServerSecurityGroup
    
  DatabaseSecurityGroup:
    Description: Database Security Group ID
    Export:
      Name: DatabaseSecurityGroup
    Value: !Ref DatabaseSecurityGroup
